feat: add header into html and style it in css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="assets\js\main.js"></script>
 </head>
 <body>
-    
+<header>
+    <div class = "sigma">
+    <button onClick="alert('Ты кликнул!!')">klik!</button>
+
+
+</div>
+</header>
 </body>
 </html>
