feat: add main part of html with ad and text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <header>
     <div class = "sigma">
     <button onClick="alert('Ты кликнул!!')">klik!</button>
+    <p>text text text </p>
+    <div class="reklama"><h1>Contact us to put your ad here!</h1> 
+    
+    <h2 style="text-align : center;">+7777738329</h2>
 
+    </div>
 
 </div>
 </header>
