--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets\css\style.css">
+    <link rel="stylesheet" href="assets\style.css">
     <script src="assets\js\main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,5 +23,13 @@
 
 </div>
 </header>
+<footer><div class="footer">
+    
+    <h2>thats footer</h2>
+    <center>
+    <a href="https://youtube.com">Wanna watch youtube? click here</a>
+    </center>
+</div>
+</footer>
 </body>
 </html>
